--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,9 @@ body{
 	90%{background:#006064;}
 	100%{background:#03A9F4;
 }
+
+#wrapper{
+	position:relative;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
