--- a/css/bubbles.css
+++ b/css/bubbles.css
@@ -25,7 +25,7 @@
 }
 .bg-bubbles li:nth-child(2){
 	left:20%;
-	idth:80px;
+	width:80px;
 	height:80px;
 	-webkit-animation-delay:2s;
 	animation-delay:2s;
