--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,186 @@
-.social {
+/*!
+ * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
+
+/* Global Styles */
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: white;
+}
+.header{
+    padding-top: 5%;
+
+}
+.header img{
+    width: 190px;
+    height: auto;
+    border-radius: 50%;
+}
+
+.header p{
+    font-size: 20px;
+}
+
+.link {
+    position:absolute;
+    width:100%;
+    bottom:0;
+    text-align:center;
+}
+.text-vertical-center {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    text-align: center;
+    font-size: 4.5em;
+    font-weight: 700;
 }
 
-.social ul {
+/* Custom Button Styles */
+
+.btn-dark {
+    border-radius: 0;
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.btn-dark:hover,
+.btn-dark:focus,
+.btn-dark:active {
+    color: #fff;
+    background-color: rgba(0,0,0,0.8);
+}
+
+.btn-light {
+    border-radius: 0;
+    color: #333;
+    background-color: rgb(255,255,255);
+}
+
+.btn-light:hover,
+.btn-light:focus,
+.btn-light:active {
+    color: #333;
+    background-color: rgba(255,255,255,0.8);
+}
+
+/* Custom Horizontal Rule */
+
+hr.small {
+    max-width: 100px;
+}
+
+/* Side Menu */
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    right: 0;
+    width: 250px;
+    height: 100%;
+    transform: translateX(250px);
+    overflow-y: auto;
+    background: #222;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+}
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
     margin: 0;
-    padding: 5px;
+    padding: 0;
+    list-style: none;
 }
 
-.social ul li {
-    margin: 5px;
-    list-style: none outside none;
-    display: inline-block;
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
 }
 
-.social i {
-    width: 40px;
-    height: 40px;
-    color: #FFF;
-    background-color: #909AA0;
-    font-size: 22px;
-    text-align:center;
-    padding-top: 12px;
-    border-radius: 50%;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -o-border-radius: 50%;
-    transition: all ease 0.3s;
-    -moz-transition: all ease 0.3s;
-    -webkit-transition: all ease 0.3s;
-    -o-transition: all ease 0.3s;
-    -ms-transition: all ease 0.3s;
-}
-
-.social i:hover {
-    color: #FFF;
+.sidebar-nav li a {
+    display: block;
     text-decoration: none;
-    transition: all ease 0.3s;
-    -moz-transition: all ease 0.3s;
-    -webkit-transition: all ease 0.3s;
-    -o-transition: all ease 0.3s;
-    -ms-transition: all ease 0.3s;
+    color: #999;
 }
 
-.social .fa-github:hover {
-    background: #343434;
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(1,255,255,0.2);
 }
 
-.social .fa-twitter:hover {
-    background: #00ABE3;
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
 }
 
-.social .fa-tumblr:hover { /* round tumblr icon*/
-    background: #3a5876;
+.sidebar-nav > .sidebar-brand {
+    height: 55px;
+    font-size: 18px;
+    line-height: 55px;
 }
 
-.social .fa-soundcloud:hover{
-	background: #FF4000;
+.sidebar-nav > .sidebar-brand a {
+    color: #999;
 }
 
-.social .fa-gamepad:hover{
-	background: #7DC265;
-}
-header .container{
-	padding-top: 75px;
-}
-	img{
-	vertical-align: middle;
-	width: 250px;
-	height: 250px;
-	border-radius: 50%;
-}
-.intro-text{text-align: center; color: white;}
-
-.name{
-	display: block;
-	font-weight: 700;
-	font-size: 2em;
-	text-transform: uppercase;
-}
-.skills{
-	font-size: 1.25em;
-	font-weight: 300;
-}
-body{
-	 height: 100vh;
-	-webkit-animation: pulse 30s infinite;
-	animation: pulse 30s infinite;
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
 }
 
-@-webkit-keyframes pulse{
-	0%{background:#03A9F4;}
-	25%{background:#00E676;}
-	50%{background:#2dace3;}
-	75%{background:#4CAF50;}
-	90%{background:#006064;}
-	100%{background:#03A9F4;
+
+#menu-toggle {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    right: 0;
 }
 
-@keyframes pulse{
-	0%{background:#03A9F4;}
-	25%{background:#00E676;}
-	50%{background:#2dace3;}
-	75%{background:#4CAF50;}
-	90%{background:#006064;}
-	100%{background:#03A9F4;
+#sidebar-wrapper.active {
+    right: 250px;
+    width: 250px;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
 }
 
-#wrapper{
-	position:relative;
-	overflow-y: hidden;
-	overflow-x: hidden;
+.toggle {
+    margin: 5px 5px 0 0;
 }
+
+/* Header */
+
+.header {
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    background: linear-gradient(rgba(0,0,0,0.325), rgba(0,0,0,0.325)), url(../img/bg.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
