--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
-/*!
- * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
 /* Global Styles */
 
 html,
 body {
     width: 100%;
     height: 100%;
+}
+
+/* Header */
+
+.header {
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    background: linear-gradient(rgba(0,0,0,0.325), rgba(0,0,0,0.325)), url(../img/bg.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 body {
@@ -208,20 +217,7 @@ hr.small {
 
 .toggle {
     margin: 5px 5px 0 0;
-}
-
-/* Header */
-
-.header {
-    display: table;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.3);
-    background: linear-gradient(rgba(0,0,0,0.325), rgba(0,0,0,0.325)), url(../img/bg.jpg) no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    margin-right: 2%;
+    margin-top: 2%;"
 }
 
