--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ body {
     color: white;
 }
 
+.lg{
+    font-size: 20px;
+}
+
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
     -ms-transform: rotate(0deg);
