--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 /* Header */
@@ -185,4 +186,39 @@ hr.small {
 .social{
     font-size:50px;
     background-color: rgba(0,0,0,0.5);
+}
+
+.icon_one{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0s;
+}
+
+.icon_two{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.1s;
+}
+
+.icon_three{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.2s;
+}
+
+.icon_four{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.3s;
+}
+
+.icon_five{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.4s;
+}
+
+.icon_six{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.5s;
+}
+
+.icon_seven{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.6s;
 }
